--- a/css/style.css
+++ b/css/style.css
@@ -214,3 +214,32 @@ footer{
     align-items: center;
     height: 50vh;
 }
+
+#clock {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#clock > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 1rem;
+}
+
+.menu {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    
+}
+
+.menu > p {
+    color: white;
+}
+
+.menu_option {
+    margin-left: 5px;
+    margin-right: 5px;
+}
