--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,11 @@ body{
 
 header{
     background-color:rgb(159, 68, 65);
-    display:flex;
-    justify-content: space-between;
-    align-content: center;
+    display:grid;
+    grid-template-columns: 1fr auto 1fr;
     padding-right: 1.5rem;
     padding-left: 1.5rem;
+    justify-items: center;
 }
 
 p {
@@ -25,12 +25,22 @@ p {
 
 /* Header på index sidan */
 .title{
+    --margin: 10px;
+
     font-size: 32px;
     color: white;
     line-height: 32px;
     font-weight: 500;
+    margin-left: var(--margin);
+    margin-right: var(--margin);
 }
 
+.title_menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: right;  
+    
+}
 
 .contact{
     display:flex;
@@ -69,6 +79,7 @@ main{
     height: fit-content;
     display:flex;
     flex-direction: column;
+    align-items: center;
 }
 
 
@@ -97,14 +108,23 @@ main{
 }
 
 .article1text{
+    display: flex;
     padding-top: 30vh;
     text-align: center;
     justify-content: center;
+    flex-direction: column;
 }
 
-.view_locations{
+.button_white{
     width:fit-content;
     border: solid white 2px;
+    padding: 0.75rem;
+    border-radius: 8px;
+}
+
+.button_black{
+    width:fit-content;
+    border: solid black 2px;
     padding: 0.75rem;
     border-radius: 8px;
 }
@@ -242,4 +262,34 @@ footer{
 .menu_option {
     margin-left: 5px;
     margin-right: 5px;
+}
+
+.info_img {
+    /*Använd bättre enheter än px*/
+    width: 200px;
+    height: 200px;
+    border: 1px solid black;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.article_info {
+    width: 80%;
+    margin: 10px;
+}
+
+.section_info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.text_info {
+    max-width: 50%;
+    color: black;
+}
+
+.text_info > a {
+    align-self: center;
+    color: black;
 }
