--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,6 @@ main{
 
 .article1text{
     display: flex;
-    padding-top: 30vh;
     text-align: center;
     justify-content: center;
     flex-direction: column;
@@ -205,7 +204,6 @@ footer{
     flex-direction: column;
     justify-items: center;
     padding:2rem;
-    border-right:black dotted 2px;
 }
 
 .media_links{
@@ -297,17 +295,17 @@ footer{
 /* Kod till newsletter */
 
 .newsletter-form {
-    background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
     border-radius: 8px;
     width: 300px;
     text-align: center;
+    margin: 0 auto; /* Add this line to center the div horizontally */
   }
 
   .newsletter-form h2 {
     margin-bottom: 20px;
-    color: #333;
+    color: #ffffff;
   }
 
   .input-group {
@@ -342,3 +340,58 @@ footer{
     background-color: #45a049;
   }
 
+
+.contact-container {
+    min-width: 30%;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.info-section {
+    background-color: #f5f5f5;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+
+.info-section h2 {
+    margin-bottom: 10px;
+    color: #333;
+}
+
+.contact-form label {
+    display: block;
+    margin-bottom: 8px;
+    color: #333;
+}
+
+.contact-form input,
+.contact-form textarea {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.contact-form button {
+    background-color: #4caf50;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.contact-form button:hover {
+    background-color: #45a049;
+}
+
+.more_text{
+    display:flex;
+    justify-content:center;
+}
