--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@ body{
     gap:0px;
     overflow-x:hidden;
     --maincolour: rgb(159, 68, 65);
+    font-family: 'Rufina';
+
 }
 
 header{
@@ -19,12 +21,21 @@ header{
     justify-items: center;
 }
 
+h1 {
+    font-size: 60px;
+
+}
+
 p {
     font-size: 20px;
 }
 
 /* Header på index sidan */
 .title{
+
+    display: flex;
+    align-items: center;
+    
     --margin: 10px;
 
     font-size: 32px;
